[gd_scene load_steps=11 format=3 uid="uid://bt0q737a4ms3y"]

[ext_resource type="Script" uid="uid://crdepg7i4oc0w" path="res://timeline.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bhslcl6r60sdr" path="res://gfx/cursor.png" id="2"]
[ext_resource type="Texture2D" uid="uid://bvml3dyfbej6f" path="res://gfx/svg/touch.png" id="4_1ys5w"]
[ext_resource type="Script" uid="uid://cb68pd44t3iec" path="res://pause_button.gd" id="4_t27w5"]
[ext_resource type="Script" uid="uid://dogu0ipjhoy6r" path="res://editor.gd" id="5"]
[ext_resource type="Texture2D" uid="uid://c23tp6sfxcl46" path="res://gfx/svg/settings.png" id="5_k4288"]
[ext_resource type="PackedScene" uid="uid://6m0j8kl54cus" path="res://gptouch.tscn" id="5_xot45"]
[ext_resource type="PackedScene" uid="uid://baowfc76krwer" path="res://settings.tscn" id="6_8yjtx"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(2, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8o8qr"]
size = Vector2(16, 16)

[node name="main" type="Node2D"]
script = ExtResource("5")

[node name="timeline" type="Node2D" parent="."]
position = Vector2(128, 64)
script = ExtResource("1")

[node name="notes" type="Node2D" parent="timeline"]

[node name="time_changes" type="Node2D" parent="timeline"]
z_index = 1

[node name="speed_changes" type="Node2D" parent="timeline"]
z_index = 1

[node name="cursor" type="Area2D" parent="timeline"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="timeline/cursor"]
position = Vector2(1, 1)
shape = SubResource("1")

[node name="Sprite2D" type="Sprite2D" parent="timeline/cursor"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2")
centered = false

[node name="bars" type="Node2D" parent="timeline"]

[node name="subtitles" type="Node2D" parent="timeline"]

[node name="special" type="Node2D" parent="timeline"]

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="LineEdit" type="LineEdit" parent="."]
offset_left = 712.0
offset_right = 792.0
offset_bottom = 32.0
text = "4.5"

[node name="settings" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_top = -540.0
offset_right = 960.0
metadata/_edit_lock_ = true

[node name="wait_time" type="LineEdit" parent="settings"]
layout_mode = 0
offset_left = 232.0
offset_top = 68.0
offset_right = 300.5625
offset_bottom = 99.0
scale = Vector2(1.4, 1.4)
text = "0"

[node name="Label" type="Label" parent="settings/wait_time"]
layout_mode = 0
offset_left = -70.0
offset_top = 4.99998
offset_right = 10.0
offset_bottom = 28.0
scale = Vector2(0.8, 0.8)
text = "Wait time:"
horizontal_alignment = 2

[node name="bpm" type="LineEdit" parent="settings"]
layout_mode = 0
offset_left = 432.0
offset_top = 68.0
offset_right = 500.5625
offset_bottom = 99.0
scale = Vector2(1.4, 1.4)
text = "120"

[node name="Label" type="Label" parent="settings/bpm"]
layout_mode = 0
offset_left = -62.0
offset_top = 4.99998
offset_right = 10.0
offset_bottom = 28.0
scale = Vector2(0.8, 0.8)
text = "BPM:"
horizontal_alignment = 2

[node name="beats" type="LineEdit" parent="settings"]
layout_mode = 0
offset_left = 231.99998
offset_top = 132.0
offset_right = 300.5625
offset_bottom = 163.0
scale = Vector2(1.4, 1.4)
text = "4"

[node name="Label" type="Label" parent="settings/beats"]
layout_mode = 0
offset_left = -62.0
offset_top = 4.99998
offset_right = 10.0
offset_bottom = 28.0
scale = Vector2(0.8, 0.8)
text = "Beats:"
horizontal_alignment = 2

[node name="division" type="LineEdit" parent="settings"]
layout_mode = 0
offset_left = 431.99997
offset_top = 132.0
offset_right = 500.56247
offset_bottom = 163.0
scale = Vector2(1.4, 1.4)
text = "2"

[node name="Label" type="Label" parent="settings/division"]
layout_mode = 0
offset_left = -62.0
offset_top = 4.99998
offset_right = 10.0
offset_bottom = 28.0
scale = Vector2(0.8, 0.8)
text = "Division:"
horizontal_alignment = 2

[node name="speed" type="LineEdit" parent="settings"]
layout_mode = 0
offset_left = 231.99998
offset_top = 196.0
offset_right = 300.5625
offset_bottom = 227.0
scale = Vector2(1.4, 1.4)
text = "1"

[node name="Label" type="Label" parent="settings/speed"]
layout_mode = 0
offset_left = -95.0
offset_top = 5.0
offset_right = 18.0
offset_bottom = 28.0
scale = Vector2(0.8, 0.8)
text = "Speed scale:"
horizontal_alignment = 2

[node name="difficulty" type="LineEdit" parent="settings"]
layout_mode = 0
offset_left = 112.00001
offset_top = 300.00003
offset_right = 180.5625
offset_bottom = 331.00003
scale = Vector2(1.4, 1.4)
text = "2"

[node name="Label" type="Label" parent="settings/difficulty"]
layout_mode = 0
offset_left = -66.0
offset_top = 4.99998
offset_right = 10.0
offset_bottom = 29.0
scale = Vector2(0.8, 0.8)
text = "Difficulty:"
horizontal_alignment = 2

[node name="name" type="LineEdit" parent="settings"]
layout_mode = 0
offset_left = 624.0
offset_top = 28.0
offset_right = 848.0
offset_bottom = 59.000008
scale = Vector2(1.4, 1.4)

[node name="Label" type="Label" parent="settings/name"]
layout_mode = 0
offset_left = -96.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = 18.0
text = "Name:"
horizontal_alignment = 2

[node name="producer" type="LineEdit" parent="settings"]
layout_mode = 0
offset_left = 792.0
offset_top = 292.0
offset_right = 888.0
offset_bottom = 323.0
scale = Vector2(1.4, 1.4)

[node name="Label" type="Label" parent="settings/producer"]
layout_mode = 0
offset_left = -96.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = 27.0
text = "Producer:"
horizontal_alignment = 2

[node name="song" type="LineEdit" parent="settings"]
layout_mode = 0
offset_left = 624.0
offset_top = 92.0
offset_right = 848.0
offset_bottom = 123.0
scale = Vector2(1.4, 1.4)

[node name="completed" type="CheckBox" parent="settings"]
layout_mode = 0
offset_left = 40.0
offset_top = 364.00003
offset_right = 153.0
offset_bottom = 395.00003
scale = Vector2(1.4, 1.4)
text = "Completed"

[node name="load_song" type="Button" parent="settings"]
layout_mode = 0
offset_left = 800.0
offset_top = 156.0
offset_right = 896.0
offset_bottom = 188.0
scale = Vector2(1.4, 1.4)
text = "Load song"

[node name="save" type="Button" parent="settings"]
layout_mode = 0
offset_left = 312.0
offset_top = 476.0
offset_right = 360.0
offset_bottom = 507.0
scale = Vector2(1.4, 1.4)
text = "Save"

[node name="load" type="Button" parent="settings"]
layout_mode = 0
offset_left = 207.99998
offset_top = 476.0
offset_right = 255.99998
offset_bottom = 507.0
scale = Vector2(1.4, 1.4)
text = "Load"

[node name="play" type="Button" parent="settings"]
layout_mode = 0
offset_left = 672.0
offset_top = 476.00003
offset_right = 720.0
offset_bottom = 507.00003
scale = Vector2(1.4, 1.4)
text = "Play"

[node name="menu" type="Button" parent="settings"]
layout_mode = 0
offset_left = 511.99997
offset_top = 476.0
offset_right = 612.0
offset_bottom = 507.0
scale = Vector2(1.4, 1.4)
text = "Save & Quit"

[node name="menu2" type="Button" parent="settings"]
layout_mode = 0
offset_left = 31.999998
offset_top = 476.0
offset_right = 74.0
offset_bottom = 507.0
scale = Vector2(1.4, 1.4)
text = "Quit"

[node name="Button8" type="Button" parent="settings"]
process_mode = 3
layout_mode = 0
offset_left = 24.0
offset_top = 28.0
offset_right = 72.0
offset_bottom = 76.0
script = ExtResource("4_t27w5")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="settings/Button8"]
position = Vector2(24, 24)
scale = Vector2(0.125, 0.125)
texture = ExtResource("5_k4288")

[node name="Settings" parent="settings" instance=ExtResource("6_8yjtx")]
visible = false
layout_mode = 0
offset_left = 192.0
offset_top = 76.0
offset_right = 768.0
offset_bottom = 460.0

[node name="Button" type="Button" parent="."]
process_mode = 3
offset_left = 800.0
offset_right = 864.0
offset_bottom = 32.0
scale = Vector2(2, 2)
text = "Settings"

[node name="Button3" type="Button" parent="."]
process_mode = 3
offset_left = 712.0
offset_top = 32.0
offset_right = 792.0
offset_bottom = 64.0
focus_mode = 1
text = "Deselect"

[node name="Button2" type="Button" parent="."]
process_mode = 3
offset_left = 800.0
offset_top = -64.0
offset_right = 864.0
offset_bottom = -32.0
scale = Vector2(2, 2)
text = "Editor"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -7.0

[node name="Label" type="Label" parent="."]
visible = false
offset_left = 200.0
offset_right = 240.0
offset_bottom = 23.0

[node name="Label2" type="Label" parent="."]
visible = false
offset_top = 32.0
offset_right = 680.0
offset_bottom = 55.0
autowrap_mode = 2

[node name="Label5" type="Label" parent="."]
modulate = Color(1, 1, 1, 0.701961)
offset_right = 40.0
offset_bottom = 23.0
metadata/_edit_use_anchors_ = true

[node name="Label6" type="Label" parent="."]
modulate = Color(1, 1, 1, 0.701961)
offset_top = 32.0
offset_right = 40.0
offset_bottom = 55.0

[node name="Label3" type="Label" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 23.0

[node name="Label4" type="Label" parent="."]
visible = false
offset_top = 96.0
offset_right = 40.0
offset_bottom = 119.0

[node name="sfx" type="Node2D" parent="."]

[node name="touch" type="Node2D" parent="."]
visible = false
texture_filter = 1

[node name="TouchScreenButton12" type="TouchScreenButton" parent="touch"]
position = Vector2(648, 488)
scale = Vector2(3.2, 3.2)
shape = SubResource("RectangleShape2D_8o8qr")
action = "e_play"
visibility_mode = 1
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="touch/TouchScreenButton12"]
scale = Vector2(0.063, 0.063)
texture = ExtResource("4_1ys5w")
hframes = 4
vframes = 8
frame = 11

[node name="edit_touch" type="Node2D" parent="touch"]
scale = Vector2(0.8, 0.8)

[node name="TouchScreenButton" type="TouchScreenButton" parent="touch/edit_touch"]
position = Vector2(60, 550)
scale = Vector2(4, 4)
shape = SubResource("RectangleShape2D_8o8qr")
action = "e_left"
visibility_mode = 1
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="touch/edit_touch/TouchScreenButton"]
scale = Vector2(0.063, 0.063)
texture = ExtResource("4_1ys5w")
hframes = 4
vframes = 8

[node name="TouchScreenButton2" type="TouchScreenButton" parent="touch/edit_touch"]
position = Vector2(130, 480)
scale = Vector2(4, 4)
shape = SubResource("RectangleShape2D_8o8qr")
action = "e_up"
visibility_mode = 1
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="touch/edit_touch/TouchScreenButton2"]
scale = Vector2(0.063, 0.063)
texture = ExtResource("4_1ys5w")
hframes = 4
vframes = 8
frame = 2

[node name="TouchScreenButton3" type="TouchScreenButton" parent="touch/edit_touch"]
position = Vector2(200, 550)
scale = Vector2(4, 4)
shape = SubResource("RectangleShape2D_8o8qr")
action = "e_right"
visibility_mode = 1
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="touch/edit_touch/TouchScreenButton3"]
scale = Vector2(0.063, 0.063)
texture = ExtResource("4_1ys5w")
hframes = 4
vframes = 8
frame = 1

[node name="TouchScreenButton4" type="TouchScreenButton" parent="touch/edit_touch"]
position = Vector2(130, 620)
scale = Vector2(4, 4)
shape = SubResource("RectangleShape2D_8o8qr")
action = "e_down"
visibility_mode = 1
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="touch/edit_touch/TouchScreenButton4"]
scale = Vector2(0.063, 0.063)
texture = ExtResource("4_1ys5w")
hframes = 4
vframes = 8
frame = 3

[node name="TouchScreenButton5" type="TouchScreenButton" parent="touch/edit_touch"]
position = Vector2(890, 610)
scale = Vector2(4, 4)
shape = SubResource("RectangleShape2D_8o8qr")
action = "e_triangle"
visibility_mode = 1
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="touch/edit_touch/TouchScreenButton5"]
scale = Vector2(0.063, 0.063)
texture = ExtResource("4_1ys5w")
hframes = 4
vframes = 8
frame = 7

[node name="TouchScreenButton6" type="TouchScreenButton" parent="touch/edit_touch"]
position = Vector2(970, 610)
scale = Vector2(4, 4)
shape = SubResource("RectangleShape2D_8o8qr")
action = "e_square"
visibility_mode = 1
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="touch/edit_touch/TouchScreenButton6"]
scale = Vector2(0.063, 0.063)
texture = ExtResource("4_1ys5w")
hframes = 4
vframes = 8
frame = 6

[node name="TouchScreenButton7" type="TouchScreenButton" parent="touch/edit_touch"]
position = Vector2(1130, 610)
scale = Vector2(4, 4)
shape = SubResource("RectangleShape2D_8o8qr")
action = "e_circle"
visibility_mode = 1
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="touch/edit_touch/TouchScreenButton7"]
scale = Vector2(0.063, 0.063)
texture = ExtResource("4_1ys5w")
hframes = 4
vframes = 8
frame = 5

[node name="TouchScreenButton8" type="TouchScreenButton" parent="touch/edit_touch"]
position = Vector2(1050, 610)
scale = Vector2(4, 4)
shape = SubResource("RectangleShape2D_8o8qr")
action = "e_cross"
visibility_mode = 1
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="touch/edit_touch/TouchScreenButton8"]
scale = Vector2(0.063, 0.063)
texture = ExtResource("4_1ys5w")
hframes = 4
vframes = 8
frame = 4

[node name="TouchScreenButton9" type="TouchScreenButton" parent="touch/edit_touch"]
modulate = Color(1, 1, 1, 0.8)
position = Vector2(970, 450)
scale = Vector2(4, 4)
shape = SubResource("RectangleShape2D_8o8qr")
action = "e_double"
visibility_mode = 1
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="touch/edit_touch/TouchScreenButton9"]
scale = Vector2(0.063, 0.063)
texture = ExtResource("4_1ys5w")
hframes = 4
vframes = 8
frame = 8

[node name="TouchScreenButton10" type="TouchScreenButton" parent="touch/edit_touch"]
modulate = Color(1, 1, 1, 0.9)
position = Vector2(1050, 530)
scale = Vector2(4, 4)
shape = SubResource("RectangleShape2D_8o8qr")
action = "e_holdl"
visibility_mode = 1
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="touch/edit_touch/TouchScreenButton10"]
scale = Vector2(0.063, 0.063)
texture = ExtResource("4_1ys5w")
hframes = 4
vframes = 8
frame = 9

[node name="TouchScreenButton11" type="TouchScreenButton" parent="touch/edit_touch"]
modulate = Color(1, 1, 1, 0.9)
position = Vector2(1130, 530)
scale = Vector2(4, 4)
shape = SubResource("RectangleShape2D_8o8qr")
action = "e_holdr"
visibility_mode = 1
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="touch/edit_touch/TouchScreenButton11"]
scale = Vector2(0.063, 0.063)
texture = ExtResource("4_1ys5w")
hframes = 4
vframes = 8
frame = 10

[node name="TouchScreenButton13" type="TouchScreenButton" parent="touch/edit_touch"]
modulate = Color(1, 1, 1, 0.65)
position = Vector2(970, 370)
scale = Vector2(4, 4)
shape = SubResource("RectangleShape2D_8o8qr")
action = "e_tech"
visibility_mode = 1
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="touch/edit_touch/TouchScreenButton13"]
scale = Vector2(0.063, 0.063)
texture = ExtResource("4_1ys5w")
hframes = 4
vframes = 8
frame = 12

[node name="TouchScreenButton14" type="TouchScreenButton" parent="touch/edit_touch"]
modulate = Color(1, 1, 1, 0.65)
position = Vector2(1050, 370)
scale = Vector2(4, 4)
shape = SubResource("RectangleShape2D_8o8qr")
action = "e_chance"
visibility_mode = 1
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="touch/edit_touch/TouchScreenButton14"]
scale = Vector2(0.063, 0.063)
texture = ExtResource("4_1ys5w")
hframes = 4
vframes = 8
frame = 13

[node name="TouchScreenButton15" type="TouchScreenButton" parent="touch/edit_touch"]
modulate = Color(1, 1, 1, 0.9)
position = Vector2(890, 530)
scale = Vector2(4, 4)
shape = SubResource("RectangleShape2D_8o8qr")
action = "e_shift"
visibility_mode = 1
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="touch/edit_touch/TouchScreenButton15"]
scale = Vector2(0.063, 0.063)
texture = ExtResource("4_1ys5w")
hframes = 4
vframes = 8
frame = 14

[node name="TouchScreenButton31" type="TouchScreenButton" parent="touch/edit_touch"]
modulate = Color(1, 1, 1, 0.9)
position = Vector2(60, 340)
scale = Vector2(4, 4)
shape = SubResource("RectangleShape2D_8o8qr")
action = "e_shift"
visibility_mode = 1
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="touch/edit_touch/TouchScreenButton31"]
scale = Vector2(0.063, 0.063)
texture = ExtResource("4_1ys5w")
hframes = 4
vframes = 8
frame = 14

[node name="TouchScreenButton16" type="TouchScreenButton" parent="touch/edit_touch"]
modulate = Color(1, 1, 1, 0.9)
position = Vector2(970, 530)
scale = Vector2(4, 4)
shape = SubResource("RectangleShape2D_8o8qr")
action = "e_ctrl"
visibility_mode = 1
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="touch/edit_touch/TouchScreenButton16"]
scale = Vector2(0.063, 0.063)
texture = ExtResource("4_1ys5w")
hframes = 4
vframes = 8
frame = 15

[node name="TouchScreenButton32" type="TouchScreenButton" parent="touch/edit_touch"]
modulate = Color(1, 1, 1, 0.9)
position = Vector2(60, 270)
scale = Vector2(4, 4)
shape = SubResource("RectangleShape2D_8o8qr")
action = "e_ctrl"
visibility_mode = 1
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="touch/edit_touch/TouchScreenButton32"]
scale = Vector2(0.063, 0.063)
texture = ExtResource("4_1ys5w")
hframes = 4
vframes = 8
frame = 15

[node name="TouchScreenButton17" type="TouchScreenButton" parent="touch/edit_touch"]
modulate = Color(1, 1, 1, 0.65)
position = Vector2(1130, 370)
scale = Vector2(4, 4)
shape = SubResource("RectangleShape2D_8o8qr")
action = "e_final"
visibility_mode = 1
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="touch/edit_touch/TouchScreenButton17"]
scale = Vector2(0.063, 0.063)
texture = ExtResource("4_1ys5w")
hframes = 4
vframes = 8
frame = 16

[node name="TouchScreenButton18" type="TouchScreenButton" parent="touch/edit_touch"]
modulate = Color(1, 1, 1, 0.5)
position = Vector2(1050, 290)
scale = Vector2(4, 4)
shape = SubResource("RectangleShape2D_8o8qr")
action = "e_movels"
visibility_mode = 1
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="touch/edit_touch/TouchScreenButton18"]
scale = Vector2(0.063, 0.063)
texture = ExtResource("4_1ys5w")
hframes = 4
vframes = 8
frame = 22

[node name="TouchScreenButton25" type="TouchScreenButton" parent="touch/edit_touch"]
modulate = Color(1, 1, 1, 0.5)
position = Vector2(1130, 290)
scale = Vector2(4, 4)
shape = SubResource("RectangleShape2D_8o8qr")
action = "e_movers"
visibility_mode = 1
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="touch/edit_touch/TouchScreenButton25"]
scale = Vector2(0.063, 0.063)
texture = ExtResource("4_1ys5w")
hframes = 4
vframes = 8
frame = 23

[node name="TouchScreenButton28" type="TouchScreenButton" parent="touch/edit_touch"]
modulate = Color(1, 1, 1, 0.5)
position = Vector2(1130, 210)
scale = Vector2(4, 4)
shape = SubResource("RectangleShape2D_8o8qr")
action = "e_subtitle"
visibility_mode = 1
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="touch/edit_touch/TouchScreenButton28"]
scale = Vector2(0.063, 0.063)
texture = ExtResource("4_1ys5w")
hframes = 4
vframes = 8
frame = 27

[node name="TouchScreenButton29" type="TouchScreenButton" parent="touch/edit_touch"]
modulate = Color(1, 1, 1, 0.5)
position = Vector2(1050, 210)
scale = Vector2(4, 4)
shape = SubResource("RectangleShape2D_8o8qr")
action = "e_subclear"
visibility_mode = 1
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="touch/edit_touch/TouchScreenButton29"]
scale = Vector2(0.063, 0.063)
texture = ExtResource("4_1ys5w")
hframes = 4
vframes = 8
frame = 28

[node name="TouchScreenButton30" type="TouchScreenButton" parent="touch/edit_touch"]
modulate = Color(1, 1, 1, 0.5)
position = Vector2(970, 210)
scale = Vector2(4, 4)
shape = SubResource("RectangleShape2D_8o8qr")
passby_press = true
action = "e_bpmchange"
visibility_mode = 1
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="touch/edit_touch/TouchScreenButton30"]
scale = Vector2(0.063, 0.063)
texture = ExtResource("4_1ys5w")
hframes = 4
vframes = 8
frame = 29

[node name="TouchScreenButton33" type="TouchScreenButton" parent="touch/edit_touch"]
modulate = Color(1, 1, 1, 0.5)
position = Vector2(890, 210)
scale = Vector2(4, 4)
shape = SubResource("RectangleShape2D_8o8qr")
passby_press = true
action = "e_checkpoint"
visibility_mode = 1
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="touch/edit_touch/TouchScreenButton33"]
scale = Vector2(0.063, 0.063)
texture = ExtResource("4_1ys5w")
hframes = 4
vframes = 8
frame = 31

[node name="TouchScreenButton26" type="TouchScreenButton" parent="touch/edit_touch"]
modulate = Color(1, 1, 1, 0.65)
position = Vector2(890, 370)
scale = Vector2(4, 4)
shape = SubResource("RectangleShape2D_8o8qr")
action = "e_delete"
visibility_mode = 1
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="touch/edit_touch/TouchScreenButton26"]
scale = Vector2(0.063, 0.063)
texture = ExtResource("4_1ys5w")
hframes = 4
vframes = 8
frame = 24

[node name="TouchScreenButton27" type="TouchScreenButton" parent="touch/edit_touch"]
position = Vector2(130, 550)
scale = Vector2(4, 4)
shape = SubResource("RectangleShape2D_8o8qr")
action = "e_voice"
visibility_mode = 1
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="touch/edit_touch/TouchScreenButton27"]
scale = Vector2(0.063, 0.063)
texture = ExtResource("4_1ys5w")
hframes = 4
vframes = 8
frame = 25

[node name="TouchScreenButton19" type="TouchScreenButton" parent="touch/edit_touch"]
modulate = Color(1, 1, 1, 0.5)
position = Vector2(970, 290)
scale = Vector2(4, 4)
shape = SubResource("RectangleShape2D_8o8qr")
action = "e_mover"
visibility_mode = 1
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="touch/edit_touch/TouchScreenButton19"]
scale = Vector2(0.063, 0.063)
texture = ExtResource("4_1ys5w")
hframes = 4
vframes = 8
frame = 21

[node name="TouchScreenButton20" type="TouchScreenButton" parent="touch/edit_touch"]
modulate = Color(1, 1, 1, 0.5)
position = Vector2(890, 290)
scale = Vector2(4, 4)
shape = SubResource("RectangleShape2D_8o8qr")
action = "e_movel"
visibility_mode = 1
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="touch/edit_touch/TouchScreenButton20"]
scale = Vector2(0.063, 0.063)
texture = ExtResource("4_1ys5w")
hframes = 4
vframes = 8
frame = 20

[node name="TouchScreenButton21" type="TouchScreenButton" parent="touch/edit_touch"]
modulate = Color(1, 1, 1, 0.8)
position = Vector2(1050, 450)
scale = Vector2(4, 4)
shape = SubResource("RectangleShape2D_8o8qr")
action = "e_flickup"
visibility_mode = 1
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="touch/edit_touch/TouchScreenButton21"]
scale = Vector2(0.063, 0.063)
texture = ExtResource("4_1ys5w")
hframes = 4
vframes = 8
frame = 17

[node name="TouchScreenButton22" type="TouchScreenButton" parent="touch/edit_touch"]
modulate = Color(1, 1, 1, 0.8)
position = Vector2(1130, 450)
scale = Vector2(4, 4)
shape = SubResource("RectangleShape2D_8o8qr")
action = "e_flickdown"
visibility_mode = 1
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="touch/edit_touch/TouchScreenButton22"]
scale = Vector2(0.063, 0.063)
texture = ExtResource("4_1ys5w")
hframes = 4
vframes = 8
frame = 18

[node name="TouchScreenButton23" type="TouchScreenButton" parent="touch/edit_touch"]
modulate = Color(1, 1, 1, 0.8)
position = Vector2(1470, 470)
scale = Vector2(4, 4)
shape = SubResource("RectangleShape2D_8o8qr")
action = "e_spin"
visibility_mode = 1
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="touch/edit_touch/TouchScreenButton23"]
scale = Vector2(0.063, 0.063)
texture = ExtResource("4_1ys5w")
hframes = 4
vframes = 8
frame = 19

[node name="TouchScreenButton24" type="TouchScreenButton" parent="touch/edit_touch"]
modulate = Color(1, 1, 1, 0.8)
position = Vector2(890, 450)
scale = Vector2(4, 4)
shape = SubResource("RectangleShape2D_8o8qr")
action = "e_invert"
visibility_mode = 1
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="touch/edit_touch/TouchScreenButton24"]
scale = Vector2(0.063, 0.063)
texture = ExtResource("4_1ys5w")
hframes = 4
vframes = 8
frame = 30

[node name="play_touch" parent="touch" instance=ExtResource("5_xot45")]
visible = false

[node name="subs" type="Label" parent="."]
offset_left = 712.0
offset_top = 72.0
offset_right = 944.0
offset_bottom = 95.0
autowrap_mode = 2

[connection signal="text_changed" from="LineEdit" to="timeline" method="_on_line_edit_text_changed"]
[connection signal="pressed" from="settings/load_song" to="." method="_on_load_song_pressed"]
[connection signal="pressed" from="settings/save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="settings/load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="settings/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="settings/menu" to="." method="_on_menu_pressed"]
[connection signal="button_up" from="settings/menu2" to="." method="_on_menu2_button_up"]
[connection signal="pressed" from="settings/Button8" to="settings/Button8" method="_on_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
